# exercise001_empty

./: README.md  main.py  pyproject.toml
doggo/: get_random_doggo.py
fibonacci/: fibonacci_from_zero.py
fizzbuzz/: fizzbuzz.py
tests/: test_doggo.py  test_fibonacci.py
